// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`strategy column metadata > matches the call snapshot 1`] = `
[
  {
    "abbrev": false,
    "greek": false,
    "group": "market",
    "heatmap": false,
    "id": "strike_cents",
    "info": "Call strike. Listed when open interest is at least 5 and the moneyness filter matches.",
    "label": "Strike",
  },
  {
    "abbrev": false,
    "greek": false,
    "group": "market",
    "heatmap": false,
    "id": "call_bid_cents",
    "info": "Call bid. Premium is 100 × bid. Net outlay is 100 × (current − bid). Effective cost uses current − bid.",
    "label": "Bid",
  },
  {
    "abbrev": false,
    "greek": false,
    "group": "market",
    "heatmap": false,
    "id": "call_ask_cents",
    "info": "Call ask. Shown with the bid so you can see the spread.",
    "label": "Ask",
  },
  {
    "abbrev": false,
    "greek": false,
    "group": "market",
    "heatmap": false,
    "id": "call_spread_cents",
    "info": "Call ask minus call bid, in dollars.",
    "label": "Spread",
  },
  {
    "abbrev": true,
    "greek": false,
    "group": "market",
    "heatmap": false,
    "id": "call_spread_pct_tenths",
    "info": "Bid-ask spread as a percent of the midpoint.",
    "label": "Sprd %",
  },
  {
    "abbrev": true,
    "greek": false,
    "group": "market",
    "heatmap": false,
    "id": "call_volume",
    "info": "Call volume for this strike and expiration.",
    "label": "Vol",
  },
  {
    "abbrev": true,
    "greek": false,
    "group": "market",
    "heatmap": false,
    "id": "call_open_interest",
    "info": "Call open interest. Missing OI or OI below 5 is omitted.",
    "label": "OI",
  },
  {
    "abbrev": false,
    "greek": false,
    "group": "capital",
    "heatmap": false,
    "id": "stock_cost_cents",
    "info": "Gross stock cost: 100 × current. Contracts multiplies this.",
    "label": "Stock cost",
  },
  {
    "abbrev": false,
    "greek": false,
    "group": "capital",
    "heatmap": false,
    "id": "premium_cents",
    "info": "Call premium received: 100 × call bid. Contracts multiplies this.",
    "label": "Premium",
  },
  {
    "abbrev": false,
    "greek": false,
    "group": "capital",
    "heatmap": false,
    "id": "outlay_cents",
    "info": "Stock cost − premium = 100 × (current − call bid). Contracts multiplies this.",
    "label": "Net outlay",
  },
  {
    "abbrev": false,
    "greek": false,
    "group": "capital",
    "heatmap": false,
    "id": "effective_cost_cents",
    "info": "Effective stock cost: current − call bid. Contracts does not scale this.",
    "label": "Effective cost",
  },
  {
    "abbrev": false,
    "greek": false,
    "group": "returns",
    "heatmap": true,
    "id": "called_pnl_cents",
    "info": "Profit if assigned: premium − (current − strike) × 100, i.e. 100 × strike − net outlay. Contracts multiplies this.",
    "label": "Called P&L",
  },
  {
    "abbrev": true,
    "greek": false,
    "group": "returns",
    "heatmap": false,
    "id": "called_pnl_per_share_cents",
    "info": "Assigned profit per share: strike + call bid − current. Contracts does not scale this.",
    "label": "P&L / sh",
  },
  {
    "abbrev": true,
    "greek": false,
    "group": "returns",
    "heatmap": true,
    "id": "simple_apr_pct_tenths",
    "info": "APR from one-contract net outlay: (called P&L / net outlay) × 365 / DTE.",
    "label": "APR (net)",
  },
  {
    "abbrev": true,
    "greek": false,
    "group": "returns",
    "heatmap": false,
    "id": "stock_apr_pct_tenths",
    "info": "APR from one-contract stock cost: (called P&L / gross stock cost) × 365 / DTE.",
    "label": "APR (stock)",
  },
  {
    "abbrev": true,
    "greek": false,
    "group": "risk",
    "heatmap": false,
    "id": "drop_to_strike_pct_tenths",
    "info": "Percent the stock would fall from current down to this strike.",
    "label": "Drop (strike)",
  },
  {
    "abbrev": true,
    "greek": false,
    "group": "risk",
    "heatmap": true,
    "id": "drop_to_breakeven_pct_tenths",
    "info": "Percent the stock would fall from current down to effective cost (current − call bid). Contracts does not scale this.",
    "label": "Drop (BE)",
  },
  {
    "abbrev": true,
    "greek": false,
    "group": "history",
    "heatmap": false,
    "id": "vs_7d_low_pct_tenths",
    "info": "(strike − 7-day completed low) / 7-day low. Positive means the strike is above that low.",
    "label": "7d",
  },
  {
    "abbrev": true,
    "greek": false,
    "group": "history",
    "heatmap": false,
    "id": "vs_30d_low_pct_tenths",
    "info": "(strike − 30-day completed low) / 30-day low. Positive means the strike is above that low.",
    "label": "30d",
  },
  {
    "abbrev": true,
    "greek": false,
    "group": "history",
    "heatmap": false,
    "id": "vs_90d_low_pct_tenths",
    "info": "(strike − 90-day completed low) / 90-day low. Positive means the strike is above that low.",
    "label": "90d",
  },
  {
    "abbrev": true,
    "greek": false,
    "group": "history",
    "heatmap": false,
    "id": "vs_365d_low_pct_tenths",
    "info": "(strike − 365-day completed low) / 365-day low. Positive means the strike is above that low.",
    "label": "365d",
  },
  {
    "abbrev": true,
    "greek": true,
    "group": "greeks",
    "heatmap": false,
    "id": "iv_pct_tenths",
    "info": "Black-Scholes implied volatility from the sell bid first, then mid. European no-dividend approximation. Shown as a percent.",
    "label": "IV",
  },
  {
    "abbrev": false,
    "greek": true,
    "group": "greeks",
    "heatmap": false,
    "id": "delta_e4",
    "info": "Black-Scholes delta. Sensitivity of option price to a $1 move in the stock.",
    "label": "Delta",
  },
  {
    "abbrev": false,
    "greek": true,
    "group": "greeks",
    "heatmap": false,
    "id": "gamma_e4",
    "info": "Black-Scholes gamma. Sensitivity of delta to a $1 move in the stock.",
    "label": "Gamma",
  },
  {
    "abbrev": false,
    "greek": true,
    "group": "greeks",
    "heatmap": false,
    "id": "theta_e4",
    "info": "Black-Scholes theta per share per calendar day.",
    "label": "Theta",
  },
  {
    "abbrev": false,
    "greek": true,
    "group": "greeks",
    "heatmap": false,
    "id": "vega_e4",
    "info": "Black-Scholes vega per 1 volatility point.",
    "label": "Vega",
  },
  {
    "abbrev": false,
    "greek": true,
    "group": "greeks",
    "heatmap": false,
    "id": "rho_e4",
    "info": "Black-Scholes rho per 1 percentage-point change in the risk-free rate.",
    "label": "Rho",
  },
]
`;

exports[`strategy column metadata > matches the put snapshot 1`] = `
[
  {
    "abbrev": false,
    "greek": false,
    "group": "market",
    "heatmap": false,
    "id": "strike_cents",
    "info": "Put strike. Listed when put open interest is at least 5 and the moneyness filter matches.",
    "label": "Strike",
  },
  {
    "abbrev": false,
    "greek": false,
    "group": "market",
    "heatmap": false,
    "id": "put_bid_cents",
    "info": "Put bid. Premium is 100 × bid. Collateral is 100 × strike.",
    "label": "Bid",
  },
  {
    "abbrev": false,
    "greek": false,
    "group": "market",
    "heatmap": false,
    "id": "put_ask_cents",
    "info": "Put ask. Shown with the bid so you can see the spread.",
    "label": "Ask",
  },
  {
    "abbrev": false,
    "greek": false,
    "group": "market",
    "heatmap": false,
    "id": "put_spread_cents",
    "info": "Put ask minus put bid, in dollars.",
    "label": "Spread",
  },
  {
    "abbrev": true,
    "greek": false,
    "group": "market",
    "heatmap": false,
    "id": "put_spread_pct_tenths",
    "info": "Bid-ask spread as a percent of the midpoint.",
    "label": "Sprd %",
  },
  {
    "abbrev": true,
    "greek": false,
    "group": "market",
    "heatmap": false,
    "id": "put_volume",
    "info": "Put volume for this strike and expiration.",
    "label": "Vol",
  },
  {
    "abbrev": true,
    "greek": false,
    "group": "market",
    "heatmap": false,
    "id": "put_open_interest",
    "info": "Put open interest. Missing OI or OI below 5 is omitted.",
    "label": "OI",
  },
  {
    "abbrev": false,
    "greek": false,
    "group": "capital",
    "heatmap": true,
    "id": "premium_cents",
    "info": "Put premium received: 100 × put bid. Contracts multiplies this.",
    "label": "Premium",
  },
  {
    "abbrev": false,
    "greek": false,
    "group": "capital",
    "heatmap": false,
    "id": "collateral_cents",
    "info": "Cash required to secure the put: 100 × strike. Contracts multiplies this.",
    "label": "Collateral",
  },
  {
    "abbrev": false,
    "greek": false,
    "group": "capital",
    "heatmap": false,
    "id": "net_collateral_cents",
    "info": "Collateral − premium. Contracts multiplies this.",
    "label": "Net cash",
  },
  {
    "abbrev": false,
    "greek": false,
    "group": "risk",
    "heatmap": false,
    "id": "breakeven_cents",
    "info": "Assigned breakeven: strike − put bid. Contracts does not scale this.",
    "label": "Breakeven",
  },
  {
    "abbrev": true,
    "greek": false,
    "group": "returns",
    "heatmap": false,
    "id": "apr_collateral_pct_tenths",
    "info": "APR from one-contract collateral: (premium / collateral) × 365 / DTE.",
    "label": "APR (coll.)",
  },
  {
    "abbrev": true,
    "greek": false,
    "group": "returns",
    "heatmap": true,
    "id": "apr_net_pct_tenths",
    "info": "APR from one-contract net cash: (premium / net collateral) × 365 / DTE.",
    "label": "APR (net)",
  },
  {
    "abbrev": true,
    "greek": false,
    "group": "risk",
    "heatmap": false,
    "id": "cushion_to_strike_pct_tenths",
    "info": "Percent the stock can fall from current down to this strike.",
    "label": "Cushion (K)",
  },
  {
    "abbrev": true,
    "greek": false,
    "group": "risk",
    "heatmap": true,
    "id": "cushion_to_breakeven_pct_tenths",
    "info": "Percent the stock can fall from current down to breakeven (strike − put bid).",
    "label": "Cushion (BE)",
  },
  {
    "abbrev": true,
    "greek": false,
    "group": "history",
    "heatmap": false,
    "id": "vs_7d_low_pct_tenths",
    "info": "(strike − 7-day completed low) / 7-day low. Positive means the strike is above that low.",
    "label": "7d",
  },
  {
    "abbrev": true,
    "greek": false,
    "group": "history",
    "heatmap": false,
    "id": "vs_30d_low_pct_tenths",
    "info": "(strike − 30-day completed low) / 30-day low. Positive means the strike is above that low.",
    "label": "30d",
  },
  {
    "abbrev": true,
    "greek": false,
    "group": "history",
    "heatmap": false,
    "id": "vs_90d_low_pct_tenths",
    "info": "(strike − 90-day completed low) / 90-day low. Positive means the strike is above that low.",
    "label": "90d",
  },
  {
    "abbrev": true,
    "greek": false,
    "group": "history",
    "heatmap": false,
    "id": "vs_365d_low_pct_tenths",
    "info": "(strike − 365-day completed low) / 365-day low. Positive means the strike is above that low.",
    "label": "365d",
  },
  {
    "abbrev": true,
    "greek": true,
    "group": "greeks",
    "heatmap": false,
    "id": "iv_pct_tenths",
    "info": "Black-Scholes implied volatility from the sell bid first, then mid. European no-dividend approximation. Shown as a percent.",
    "label": "IV",
  },
  {
    "abbrev": false,
    "greek": true,
    "group": "greeks",
    "heatmap": false,
    "id": "delta_e4",
    "info": "Black-Scholes delta. Sensitivity of option price to a $1 move in the stock.",
    "label": "Delta",
  },
  {
    "abbrev": false,
    "greek": true,
    "group": "greeks",
    "heatmap": false,
    "id": "gamma_e4",
    "info": "Black-Scholes gamma. Sensitivity of delta to a $1 move in the stock.",
    "label": "Gamma",
  },
  {
    "abbrev": false,
    "greek": true,
    "group": "greeks",
    "heatmap": false,
    "id": "theta_e4",
    "info": "Black-Scholes theta per share per calendar day.",
    "label": "Theta",
  },
  {
    "abbrev": false,
    "greek": true,
    "group": "greeks",
    "heatmap": false,
    "id": "vega_e4",
    "info": "Black-Scholes vega per 1 volatility point.",
    "label": "Vega",
  },
  {
    "abbrev": false,
    "greek": true,
    "group": "greeks",
    "heatmap": false,
    "id": "rho_e4",
    "info": "Black-Scholes rho per 1 percentage-point change in the risk-free rate.",
    "label": "Rho",
  },
]
`;
